syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";


option (scalapb.options) = {
  package_name: "kompact.messages"

  // All classes that extend a sealed trait need to be in the same Scala
  // file, so we set single_file to true.
  single_file: true
  flat_package: true
};

message Hello {
    string hey = 1;
}

message Ask {
    string askActor = 1;
    KompactAkkaMsg msg = 2[(scalapb.field).no_box = true];
}

message AskReply {
    string askActor = 1;
    KompactAkkaMsg msg = 2[(scalapb.field).no_box = true];
}

message ExecutorRegistration {
    string jobId = 1;
    KompactAkkaPath src = 2[(scalapb.field).no_box = true];
    KompactAkkaPath dst = 3[(scalapb.field).no_box = true];
}

message KompactAkkaPath {
    string path = 1;
    string ip = 2;
    int32 port = 3;
}

message KompactAkkaMsg {
    oneof payload {
        ExecutorRegistration executorRegistration = 1;
        Hello hello = 2;
        Ask ask = 3;
        AskReply askReply = 4;
    }
}
message KompactAkkaEnvelope {
    KompactAkkaPath src = 1[(scalapb.field).no_box = true];
    KompactAkkaPath dst = 2[(scalapb.field).no_box = true];
    KompactAkkaMsg msg = 3[(scalapb.field).no_box = true];
}
